# range-search

./: .gitignore  CMakeLists.txt  README.md
benchmark_results/: construction_time.csv  memory_analysis.csv  plot.sh  query_time.csv
docs/: .gitignore  CGAL_installation.md  main.typ  refs.bib  template.typ
include/: algorithms.h  geometry.h
src/: benchmark_main.cpp  main.cpp  visualization.cpp  visualization.h  visualization_main.cpp
tests/: CMakeLists.txt  test_main.cpp
